--- a/algorithm/LeetCode/[Hard] 1368. Minimum Cost to Make at Least One Valid Path in a Grid.md
+++ b/algorithm/LeetCode/[Hard] 1368. Minimum Cost to Make at Least One Valid Path in a Grid.md
@@ -117,3 +117,303 @@ class Solution:
             [dfs(x + dx, y + dy) for x, y in bfs2 for dx, dy in dirt]
         return dp[-1][-1]
 ```
+
+**Solution 2: (DP, Bottom-Up)**
+```
+Runtime: 58 ms
+Memory: 29.63 MB
+```
+```c++
+class Solution {
+public:
+    int minCost(vector<vector<int>>& grid) {
+        int numRows = grid.size(), numCols = grid[0].size();
+        vector<vector<int>> minChanges(numRows, vector<int>(numCols, INT_MAX));
+
+        // Initialize all cells with max value
+        minChanges[0][0] = 0;
+
+        while (true) {
+            // Store previous state to check for convergence
+            vector<vector<int>> prevState = minChanges;
+
+            // Forward pass: check cells coming from left and top
+            for (int row = 0; row < numRows; row++) {
+                for (int col = 0; col < numCols; col++) {
+                    // Check cell above
+                    if (row > 0) {
+                        minChanges[row][col] =
+                            min(minChanges[row][col],
+                                minChanges[row - 1][col] +
+                                    (grid[row - 1][col] == 3 ? 0 : 1));
+                    }
+                    // Check cell to the left
+                    if (col > 0) {
+                        minChanges[row][col] =
+                            min(minChanges[row][col],
+                                minChanges[row][col - 1] +
+                                    (grid[row][col - 1] == 1 ? 0 : 1));
+                    }
+                }
+            }
+
+            // Backward pass: check cells coming from right and bottom
+            for (int row = numRows - 1; row >= 0; row--) {
+                for (int col = numCols - 1; col >= 0; col--) {
+                    // Check cell below
+                    if (row < numRows - 1) {
+                        minChanges[row][col] =
+                            min(minChanges[row][col],
+                                minChanges[row + 1][col] +
+                                    (grid[row + 1][col] == 4 ? 0 : 1));
+                    }
+                    // Check cell to the right
+                    if (col < numCols - 1) {
+                        minChanges[row][col] =
+                            min(minChanges[row][col],
+                                minChanges[row][col + 1] +
+                                    (grid[row][col + 1] == 2 ? 0 : 1));
+                    }
+                }
+            }
+
+            // If no changes were made in this iteration, we've found optimal
+            // solution
+            if (prevState == minChanges) {
+                break;
+            }
+        }
+
+        return minChanges[numRows - 1][numCols - 1];
+    }
+};
+```
+
+**Solution 3: (Dijkstra)**
+```
+Runtime: 91 ms
+Memory: 30.78 MB
+```
+```c++
+class Solution {
+    // Direction vectors: right, left, down, up (matching grid values 1, 2, 3,
+    // 4)
+    vector<vector<int>> dirs = {{0, 1}, {0, -1}, {1, 0}, {-1, 0}};
+public:
+    int minCost(vector<vector<int>>& grid) {
+        int numRows = grid.size(), numCols = grid[0].size();
+
+        // Min-heap ordered by cost. Each element is {cost, row, col}
+        priority_queue<vector<int>, vector<vector<int>>, greater<>> pq;
+        pq.push({0, 0, 0});
+
+        // Track minimum cost to reach each cell
+        vector<vector<int>> minCost(numRows, vector<int>(numCols, INT_MAX));
+        minCost[0][0] = 0;
+
+        while (!pq.empty()) {
+            auto curr = pq.top();
+            pq.pop();
+            int cost = curr[0], row = curr[1], col = curr[2];
+
+            // Skip if we've found a better path to this cell
+            if (minCost[row][col] != cost) continue;
+
+            // Try all four directions
+            for (int dir = 0; dir < 4; dir++) {
+                int newRow = row + dirs[dir][0];
+                int newCol = col + dirs[dir][1];
+
+                // Check if new position is valid
+                if (newRow >= 0 && newRow < numRows && newCol >= 0 &&
+                    newCol < numCols) {
+                    // Add cost=1 if we need to change direction
+                    int newCost = cost + (dir != (grid[row][col] - 1) ? 1 : 0);
+
+                    // Update if we found a better path
+                    if (minCost[newRow][newCol] > newCost) {
+                        minCost[newRow][newCol] = newCost;
+                        pq.push({newCost, newRow, newCol});
+                    }
+                }
+            }
+        }
+
+        return minCost[numRows - 1][numCols - 1];
+    }
+};
+```
+
+**Solution 4: (0-1 Breadth-First Search)**
+```
+Runtime: 11 ms
+Memory: 26.26 MB
+```
+```c++
+class Solution {
+    // Direction vectors: right, left, down, up (matching grid values 1, 2, 3,
+    // 4)
+    vector<vector<int>> dirs = {{0, 1}, {0, -1}, {1, 0}, {-1, 0}};
+    // Check if coordinates are within grid bounds
+    bool isValid(int row, int col, int numRows, int numCols) {
+        return row >= 0 && row < numRows && col >= 0 && col < numCols;
+    }
+public:
+    int minCost(vector<vector<int>>& grid) {
+        int numRows = grid.size(), numCols = grid[0].size();
+
+        // Track minimum cost to reach each cell
+        vector<vector<int>> minCost(numRows, vector<int>(numCols, INT_MAX));
+
+        // Use deque for 0-1 BFS - add zero cost moves to front, cost=1 to back
+        deque<pair<int, int>> deque;
+        deque.push_front({0, 0});
+        minCost[0][0] = 0;
+
+        while (!deque.empty()) {
+            auto [row, col] = deque.front();
+            deque.pop_front();
+
+            // Try all four directions
+            for (int dir = 0; dir < 4; dir++) {
+                int newRow = row + dirs[dir][0];
+                int newCol = col + dirs[dir][1];
+                int cost = (grid[row][col] != (dir + 1)) ? 1 : 0;
+
+                // If position is valid and we found a better path
+                if (isValid(newRow, newCol, numRows, numCols) &&
+                    minCost[row][col] + cost < minCost[newRow][newCol]) {
+                    minCost[newRow][newCol] = minCost[row][col] + cost;
+
+                    // Add to back if cost=1, front if cost=0
+                    if (cost == 1) {
+                        deque.push_back({newRow, newCol});
+                    } else {
+                        deque.push_front({newRow, newCol});
+                    }
+                }
+            }
+        }
+
+        return minCost[numRows - 1][numCols - 1];
+    }
+};
+```
+
+**Solution 5: (DFS, BFS)**
+```
+Runtime: 11 ms
+Memory: 19.99 MB
+```
+```c++
+class Solution {
+    // Direction vectors: right, left, down, up (matching grid values 1, 2, 3,
+    // 4)
+    vector<vector<int>> dirs = {{0, 1}, {0, -1}, {1, 0}, {-1, 0}};
+     // DFS to explore all reachable cells with current cost
+    void dfs(vector<vector<int>>& grid, int row, int col,
+             vector<vector<int>>& minCost, int cost,
+             queue<pair<int, int>>& queue) {
+        if (!isUnvisited(minCost, row, col)) return;
+
+        minCost[row][col] = cost;
+        queue.push({row, col});
+
+        // Follow the arrow direction without cost increase
+        int nextDir = grid[row][col] - 1;
+        dfs(grid, row + dirs[nextDir][0], col + dirs[nextDir][1], minCost, cost,
+            queue);
+    }
+
+    // Check if cell is within bounds and unvisited
+    bool isUnvisited(vector<vector<int>>& minCost, int row, int col) {
+        return row >= 0 && col >= 0 && row < minCost.size() &&
+               col < minCost[0].size() && minCost[row][col] == INT_MAX;
+    }
+public:
+    int minCost(vector<vector<int>>& grid) {
+        int numRows = grid.size(), numCols = grid[0].size(), cost = 0;
+
+        // Track minimum cost to reach each cell
+        vector<vector<int>> minCost(numRows, vector<int>(numCols, INT_MAX));
+
+        // Queue for BFS part - stores cells that need cost increment
+        queue<pair<int, int>> queue;
+
+        // Start DFS from origin with cost 0
+        dfs(grid, 0, 0, minCost, cost, queue);
+
+        // BFS part - process cells level by level with increasing cost
+        while (!queue.empty()) {
+            cost++;
+            int levelSize = queue.size();
+
+            while (levelSize-- > 0) {
+                auto [row, col] = queue.front();
+                queue.pop();
+
+                // Try all 4 directions for next level
+                for (int dir = 0; dir < 4; dir++) {
+                    dfs(grid, row + dirs[dir][0], col + dirs[dir][1], minCost,
+                        cost, queue);
+                }
+            }
+        }
+
+        return minCost[numRows - 1][numCols - 1];
+    }
+};
+```
+
+**Solution 6: (DFS, BFS)**
+```
+Runtime: 0 ms
+Memory: 18.80 MB
+```
+```c++
+class Solution {
+    int dd[5][2] = {{-1,-1},{0,1}, {0,-1}, {1,0},{-1,0}};
+public:
+    int minCost(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), nr, nc, i, ans = 0;
+        vector<vector<bool>> visited(m, vector<bool>(n));
+        stack<pair<int,int>> stk;
+        queue<pair<int,int>> q;
+        stk.push({0, 0});
+        while (1) {
+            while (stk.size()) {
+                auto [r, c] = stk.top();
+                if (r == m-1 && c == n-1) {
+                    return ans;
+                }
+                stk.pop();
+                nr = r + dd[grid[r][c]][0];
+                nc = c + dd[grid[r][c]][1];
+                if (0 <= nr && nr < m && 0 <= nc && nc < n && !visited[nr][nc]) {
+                    visited[nr][nc] = true;
+                    stk.push({nr,nc});
+                }
+                for (i = 1; i <= 4; i ++) {
+                    if (i != grid[r][c]) {
+                        nr = r + dd[i][0];
+                        nc = c + dd[i][1];
+                        if (0 <= nr && nr < m && 0 <= nc && nc < n && !visited[nr][nc]) {
+                            q.push({nr,nc});
+                        }
+                    }
+                }
+            }
+            while (q.size()) {
+                auto [r, c] = q.front();
+                q.pop();
+                if (!visited[r][c]) {
+                    visited[r][c] = true;
+                    stk.push({r,c});
+                }
+            }
+            ans += 1;
+        }
+        return -1;
+    }
+};
+```
